--- a/sam/ryu/conf/switch.yaml
+++ b/sam/ryu/conf/switch.yaml
@@ -10,7 +10,7 @@
   dcnGatewayPeerIP:
   switchID: 2
   lANNet: 2.2.0.64/27
-  switchType: SWITCH_TYPE_SFF
+  switchType: SWITCH_TYPE_NPOP
   dpid: 2
   dcnGatewaySelfIP:
   gatewayIP: 2.2.0.65
@@ -18,7 +18,7 @@
   dcnGatewayPeerIP:
   switchID: 3
   lANNet: 2.2.0.96/27
-  switchType: SWITCH_TYPE_SFF
+  switchType: SWITCH_TYPE_NPOP
   dpid: 3
   dcnGatewaySelfIP:
   gatewayIP: 2.2.0.97
