--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "cstdlib": "cpp",
         "ostream": "cpp",
         "limits": "cpp"
-    }
+    },
+    "python.pythonPath": "/usr/bin/python"
 }
