--- a/sam/ryu/conf/logicalTwoTier.yaml
+++ b/sam/ryu/conf/logicalTwoTier.yaml
@@ -1,48 +1,66 @@
 1: !SwitchConf
   dcnGatewayPeerIP: 1.1.1.2
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.33
+  physicalSwitchPassword: thu325325
   switchID: 1
   lANNet: 2.2.0.32/27
   switchType: SWITCH_TYPE_DCNGATEWAY
   dpid: 1
   dcnGatewaySelfIP: 1.1.1.1
-  gatewayIP: 2.2.0.33
+  physicalSwitchManagementIP: 192.168.100.1
 2: !SwitchConf
   dcnGatewayPeerIP:
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.65
+  physicalSwitchPassword: thu325325
   switchID: 2
   lANNet: 2.2.0.64/27
   switchType: SWITCH_TYPE_NPOP
   dpid: 2
   dcnGatewaySelfIP:
-  gatewayIP: 2.2.0.65
+  physicalSwitchManagementIP: 192.168.100.2
 3: !SwitchConf
   dcnGatewayPeerIP:
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.97
+  physicalSwitchPassword: thu325325
   switchID: 3
   lANNet: 2.2.0.96/27
   switchType: SWITCH_TYPE_NPOP
   dpid: 3
   dcnGatewaySelfIP:
-  gatewayIP: 2.2.0.97
+  physicalSwitchManagementIP: 192.168.100.2
 4: !SwitchConf
   dcnGatewayPeerIP:
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.129
+  physicalSwitchPassword: thu325325
   switchID: 4
   lANNet: 2.2.0.128/27
   switchType: SWITCH_TYPE_FORWARD
   dpid: 4
   dcnGatewaySelfIP:
-  gatewayIP: 2.2.0.129
+  physicalSwitchManagementIP: 192.168.100.2
 5: !SwitchConf
   dcnGatewayPeerIP:
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.161
+  physicalSwitchPassword: thu325325
   switchID: 5
   lANNet: 2.2.0.160/27
   switchType: SWITCH_TYPE_FORWARD
   dpid: 5
   dcnGatewaySelfIP:
-  gatewayIP: 2.2.0.161
+  physicalSwitchManagementIP: 192.168.100.1
 6: !SwitchConf
   dcnGatewayPeerIP:
+  physicalSwitchUserName: admin
+  gatewayIP: 2.2.0.193
+  physicalSwitchPassword: thu325325
   switchID: 6
   lANNet: 2.2.0.192/27
   switchType: SWITCH_TYPE_FORWARD
   dpid: 6
   dcnGatewaySelfIP:
-  gatewayIP: 2.2.0.193
+  physicalSwitchManagementIP: 192.168.100.1
