--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "ostream": "cpp",
         "limits": "cpp"
     },
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/home/smith/anaconda3/envs/sam/bin/python"
 }
