refactor topology for turbonet
supplement type hint

change server info collection to gRPC based

--- a/install.yml
+++ b/install.yml
@@ -19,7 +19,7 @@
           - netifaces
           - getmac
           - pytest
-          - MySQL-python
+          - MySQL-python==1.2.5
           - networkx
           - numpy
           - pandas
